_sass/post.scss
.headliner{
  margin-top: -$logo-height;
  margin-bottom: 0;
  width: 100%;
  overflow: hidden;
  height: 500px;
  position: relative;

  img{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    min-height: 100%;
    width: 100%;
    object-fit: cover;
  }
}

article.post{

  .content-wrap{
    margin-top: 20px;
    margin-bottom: 50px;

    img{
      display: block;
      max-width: 100%;
      margin: 0 auto;
    }

    iframe{
      display:block;
      margin: 0 auto;
    }
  }
}

.feature{
  display: block;
  width: 800px;
}

.logo-top{
  position: relative;
  display: block;
  z-index: 2;
}



.title-background-bar{
  width: 100%;
  margin: 0;
  background-color: #333;
  position: relative;

  .title-wrap{
    padding: 10px 0 50px 0px;

    .post-details{
      color: #fff;
    }

    h1{
      margin-bottom: 0px;
      text-shadow: 1px 1px 1px #111;
      font-size: 48px;

      a{
        color: #fff;
      }
    }

    hr{
      border-color: #c0c0c0;
    }
  }
    
  svg.angle-border-mask{
    fill: #fff;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0px;
  }
}

.share-links{
  text-align: right;
  font-size: 30px;

  a.share-link{
    margin-left: 5px;
    color: #fff !important;
    transition-property: color;
    transition-duration: 0.3s;

    &:hover{
      color: #111 !important;
    }
  }
}

.post-content{
  color: #fff;

  a{
    color: #fff;
  }

  .wrap{
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;

    h4{
      font-size: 18px;
      text-shadow: 1px 1px 1px #111;

      @media (min-width: $bs-break-sm) {
        font-size: 20px;
      }
      @media (min-width: $bs-break-md) {
        font-size: 26px;
      }
    }

    &.tags{
      min-height: 50px;
      background-color: #333;

      .tag{
        color: #333;
        background-color: #fff;
        margin: 4px 2px;
        font-size: 14px;
        font-weight: normal;
      }
    }

    &.related{
      background-color: #222;
    }
  }
}

